가이드 워딩 텍스트 수정

--- a/fieldBy/Main/Campaign/Guide/GuideCampaign.storyboard
+++ b/fieldBy/Main/Campaign/Guide/GuideCampaign.storyboard
@@ -179,7 +179,7 @@
                                                                                 <constraint firstAttribute="width" secondItem="eE3-KA-XTW" secondAttribute="height" multiplier="1:1" id="ymt-0T-ehS"/>
                                                                             </constraints>
                                                                         </imageView>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CU0-3H-Uai">
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CU0-3H-Uai">
                                                                             <rect key="frame" x="0.0" y="172" width="29.5" height="16"/>
                                                                             <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="13"/>
                                                                             <color key="textColor" name="Black"/>
